src/index.css
:root {
  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
}

body {
  margin: 0;
  height: 100dvh;
  background-color: whitesmoke;
}

#root {
  height: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-between;
}

.dark-background {
  background-color: rgb(64, 64, 64);
  color: whitesmoke !important;
  fill: whitesmoke;
}

.dark-form {
  background-color: rgb(73, 73, 73) !important;
}

.dark-page {
  background-color: rgb(73, 73, 73) !important;
}

.dark-link {
  color: whitesmoke !important;
}

.dark-hover:hover {
  background-color: rgb(64, 64, 64) !important;
}

header {
  display: flex;
  justify-content: center;
  width: 100%;
}

.theme-svg {
  position: absolute;
  right: 10px;
  top: 10px;
  height: 40px;
}
.theme-svg:hover {
  cursor: pointer;
}

main {
  display: grid;
  grid-template-columns: 2fr 3fr;
  gap: 1rem;
  width: 850px;
}

#school-forms,
#work-forms {
  display: flex;
  flex-direction: column;
  gap: 2rem;
}

#skills-form > div:nth-child(2) {
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
}

#page {
  background-color: white;
  display: flex;
  flex-direction: column;
  padding: 1rem;
  min-height: 650px;
  border-radius: 20px;
}

.info-form {
  background-color: white;
  padding: 1rem;
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
  border-radius: 20px;
  align-items: center;
}

.inner-form {
  width: 80%;
}

#contact-info-sec > h2 {
  text-align: center;
}

#contact-info-sec {
  width: 100%;
}

#contact-info-sec > div {
  display: flex;
  justify-content: center;
  gap: 1rem;
}

#school-info-sec > div {
  display: flex;
  flex-direction: column;
  gap: 1rem;
}

#school-info-sec > div > div {
  display: grid;
  grid-template-columns: 1fr 1fr;
  grid-template-rows: 1fr;
}

.graduation-date {
  text-align: right;
}

#work-info-sec > div > div > div {
  display: grid;
  grid-template-columns: 1fr 1fr;
}

#work-info-sec > div {
  display: flex;
  flex-direction: column;
  gap: 1rem;
}

#work-time {
  text-align: right;
}

.duty,
.skill {
  display: flex;
  gap: 0.5rem;
}

.skill > input:first-child,
.duty > input:first-child {
  flex: 1;
}

.skill > input:nth-child(2),
.duty > input:nth-child(2) {
  flex: 0;
}

#skills,
#duties {
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
}

#forms {
  display: flex;
  flex-direction: column;
  gap: 1rem;
}

ul {
  margin: 0;
}

form {
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
}

.inputDiv {
  display: flex;
  gap: 0.25rem;
}

input {
  width: 100%;
  border: 1px solid lightgray;
  border-radius: 3px;
  height: 20px;
}

.dark-input {
  background-color: rgb(94, 94, 94);
  color: whitesmoke;
  border: none;
  border-radius: 3px;
}

label {
  text-wrap: nowrap;
}

#asterisk {
  color: rgb(191, 75, 75);
}

.errorMessage {
  height: 8px;
  color: rgb(191, 75, 75);
}

.options {
  display: flex;
  gap: 0.5rem;
}

.headingContainer {
  display: flex;
  justify-content: center;
}

#menu-svg {
  height: 30px;
}

.formHeading {
  margin: 0;
  width: fit-content;
  padding: 5px;
}

.headingContainer:hover {
  background-color: whitesmoke;
  border-radius: 10px;
  cursor: pointer;
}

#skills-info {
  display: flex;
  gap: 1rem;
  justify-content: space-between;
  flex-wrap: wrap;
}

footer {
  display: flex;
  justify-content: center;
  padding: 1rem 0;
}

a {
  text-decoration: none;
  color: black;
}

a:hover {
  cursor: pointer;
}

@media (max-width: 900px) {
  #root {
    height: auto;
  }
  main {
    grid-template-columns: 1fr;
    width: 600px;
  }
  #page {
    min-height: 850px;
  }

  .inner-form {
    width: 70%;
  }
}

@media (max-width: 650px) {
  main {
    width: 400px;
  }
  #page {
    min-height: 600px;
  }
}

